fixed image overflow in cards

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,11 +54,6 @@ nav p {
   animation: resaltar 2s infinite;
 }
 
-.my-placeholder {
-  display: flex;
-  width: 100%;
-}
-
 .menu {
   display: flex;
   justify-content: flex-end;
@@ -132,7 +127,7 @@ footer {
 }
 
 .project-card img:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 @keyframes aparecer {
